<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/it1"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/itemInicio"
        app:showAsAction="always"
        android:onClick="actin"/>
    <item
        android:id="@+id/it2"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/itemCargarTodos"
        app:showAsAction="always|never"
        android:onClick="actmtd"/>
    <item
        android:id="@+id/it3"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/itemEliminar"
        app:showAsAction="always|never"
        android:onClick="acte"/>
</menu>